feat(theme): add `changelog` and improve `contributors`, close #319 (#329)

--- a/docs/notes/theme/config/主题配置.md
+++ b/docs/notes/theme/config/主题配置.md
@@ -1,6 +1,5 @@
 ---
 title: 主题配置
-author: pengzhanbo
 createTime: 2024/03/02 18:07:03
 permalink: /config/basic/
 ---
@@ -28,8 +27,7 @@ permalink: /config/basic/
   主题使用的插件默认已进行了配置，大多数情况下您不需要进行修改，如果需要使用到细致的定制化，请查阅
 [此文档](./plugins/README.md)
 
-  ::: warning
-  该字段不支持在 [主题配置文件 `plume.config.js`](./配置说明.md#主题配置文件) 中进行配置。
+  ::: warning 该字段不支持在 [主题配置文件 `plume.config.js`](./配置说明.md#主题配置文件) 中进行配置。
   :::
 
 ### hostname
@@ -42,8 +40,7 @@ permalink: /config/basic/
 
   当 `hostname` 配置为有效域名时，主题将会生成 `sitemap` 和 `seo` 相关的内容。
 
-  ::: warning
-  该字段不支持在 [主题配置文件 `plume.config.js`](./配置说明.md#主题配置文件) 中进行配置。
+  ::: warning 该字段不支持在 [主题配置文件 `plume.config.js`](./配置说明.md#主题配置文件) 中进行配置。
   :::
 
 ### blog
@@ -260,6 +257,78 @@ interface BlogPostCover {
   该字段不支持在 [主题配置文件 `plume.config.js`](./配置说明.md#主题配置文件) 中进行配置。
 
   为了使缓存能够生效，您应该 **删除** `package.json` 中 `vuepress dev` 开发服务启动脚本中的 `--clean-cache` 参数。
+  :::
+
+### docsRepo
+
+- 类型： `string`
+- 默认值： `''`
+- 详情： 文档仓库配置, 用于生成 `Edit this page` 链接。
+
+### docsBranch
+
+- 类型： `string`
+- 默认值： `''`
+- 详情： 文档仓库分支配置，用于生成 `Edit this page` 链接。
+
+### docsDir
+
+- 类型： `string`
+- 默认值： `''`
+- 详情： 文档仓库目录配置，用于生成 `Edit this page` 链接。
+
+### editLink
+
+- 类型： `boolean`
+- 默认值： `true`
+- 详情： 是否启用 编辑链接
+
+  ::: warning 该字段不支持在 [主题配置文件 `plume.config.js`](./配置说明.md#主题配置文件) 中进行配置。
+  :::
+
+### lastUpdated
+
+- 类型： `false | LastUpdatedOptions`
+- 默认值： `{ formatOptions: { dateStyle: 'short', timeStyle: 'short' } }`
+- 详情： 最后更新时间
+
+```ts
+interface LastUpdatedOptions {
+
+  /**
+   * 设置最后更新时间格式的选项。
+   * @see https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Intl/DateTimeFormat#using_options
+   *
+   * @default
+   * { dateStyle: 'short', timeStyle: 'short' }
+   */
+  formatOptions?: Intl.DateTimeFormatOptions & { forceLocale?: boolean }
+}
+```
+
+  ::: warning 该字段不支持在 [主题配置文件 `plume.config.js`](./配置说明.md#主题配置文件) 中进行配置。
+  :::
+
+### contributors
+
+- 类型： `boolean | ContributorsOptions`
+- 默认值： `true`
+- 详情： 是否显示贡献者
+
+  更多配置请参考 [此文档](../guide/功能/文章贡献者.md)
+
+  ::: warning 该字段不支持在 [主题配置文件 `plume.config.js`](./配置说明.md#主题配置文件) 中进行配置。
+  :::
+
+### changelog
+
+- 类型： `boolean | ChangelogOptions`
+- 默认值： `false`
+- 详情： 是否显示页面变更历史
+
+  更多配置请参考 [此文档](../guide/功能/文章变更历史.md)
+
+  ::: warning 该字段不支持在 [主题配置文件 `plume.config.js`](./配置说明.md#主题配置文件) 中进行配置。
   :::
 
 ### locales
@@ -717,12 +786,6 @@ interface SidebarItem {
 
   移动设备下的导航栏中大纲标题的文本
 
-### editLink
-
-- 类型： `boolean`
-- 默认值： `true`
-- 详情： 是否启用 编辑链接
-
 ### editLinkText
 
 - 类型： `string`
@@ -737,61 +800,35 @@ interface SidebarItem {
 
   示例： `':repo/edit/:branch/:path'`
 
-### docsRepo
+### latestUpdatedText
 
 - 类型： `string`
-- 默认值： `''`
-- 详情： 文档仓库配置, 用于生成 `Edit this page` 链接。
-
-### docsBranch
-
-- 类型： `string`
-- 默认值： `''`
-- 详情： 文档仓库分支配置，用于生成 `Edit this page` 链接。
-
-### docsDir
-
-- 类型： `string`
-- 默认值： `''`
-- 详情： 文档仓库目录配置，用于生成 `Edit this page` 链接。
-
-### lastUpdated
-
-- 类型： `false | LastUpdatedOptions`
-- 默认值： `{ text: 'Last Updated', formatOptions: { dateStyle: 'short', timeStyle: 'short' } }`
-- 详情： 最后更新时间
-
-```ts
-interface LastUpdatedOptions {
-  /**
-   * 设置 最后更新时间 的文本
-   *
-   * @default 'Last updated'
-   */
-  text?: string
-
-  /**
-   * 设置最后更新时间格式的选项。
-   * @see https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Intl/DateTimeFormat#using_options
-   *
-   * @default
-   * { dateStyle: 'short', timeStyle: 'short' }
-   */
-  formatOptions?: Intl.DateTimeFormatOptions & { forceLocale?: boolean }
-}
-```
-
-### contributors
-
-- 类型： `boolean`
-- 默认值： `true`
-- 详情： 是否显示贡献者
+- 默认值： `'Latest Updated'`
+- 详情： 最近更新时间 的文本
 
 ### contributorsText
 
 - 类型： `string`
 - 默认值： `'Contributors'`
 - 详情： 贡献者的文本
+
+### changelogText
+
+- 类型： `string`
+- 默认值： `'Changelog'`
+- 详情： 变更记录的文本
+
+### changelogOnText
+
+- 类型： `string`
+- 默认值： `'On'`
+- 详情： 单次变更记录的时间文本
+
+### changelogButtonText
+
+- 类型： `string`
+- 默认值： `'View All Changelog'`
+- 详情： 变更记录的按钮文本
 
 ### prevPage
 
