docs: improve docs (#332)

--- a/docs/notes/theme/config/plugins/代码高亮.md
+++ b/docs/notes/theme/config/plugins/代码高亮.md
@@ -39,6 +39,9 @@ Shiki 支持多种编程语言。
 
 默认配置：
 
+::: code-tabs
+@tab .vuepress/config.ts
+
 ```ts
 import { defineUserConfig } from 'vuepress'
 import { plumeTheme } from 'vuepress-theme-plume'
@@ -53,6 +56,8 @@ export default defineUserConfig({
   }),
 })
 ```
+
+:::
 
 ### theme
 
