--- a/docs/notes/theme/config/plugins/搜索.md
+++ b/docs/notes/theme/config/plugins/搜索.md
@@ -17,6 +17,9 @@ permalink: /config/plugins/search/
 
 默认配置：
 
+::: code-tabs
+@tab .vuepress/config.ts
+
 ```ts
 import { defineUserConfig } from 'vuepress'
 import { plumeTheme } from 'vuepress-theme-plume'
@@ -31,6 +34,8 @@ export default defineUserConfig({
   })
 })
 ```
+
+:::
 
 ### 配置
 
