--- a/docs/notes/theme/config/plugins/水印.md
+++ b/docs/notes/theme/config/plugins/水印.md
@@ -11,6 +11,43 @@ permalink: /config/watermark/
 
 关联插件：[@vuepress/plugin-watermark](https://ecosystem.vuejs.press/zh/plugins/features/watermark.html)
 
+## 使用
+
+::: code-tabs
+@tab .vuepress/config.ts
+
+```ts
+import { defineUserConfig } from 'vuepress'
+import { plumeTheme } from 'vuepress-theme-plume'
+
+export default defineUserConfig({
+  theme: plumeTheme({
+    plugins: {
+      // watermark: true,
+      watermark: {
+        // enabled: false,  // boolean 类型控制是否全局启用
+        enabled: page => true, // function 类型 过滤哪些页面启用水印
+        delay: 500, // 添加水印的延时。以毫秒为单位。
+
+        /**
+         * 是否全屏水印，默认为 `true`，
+         * 设置为 `false` 时，水印仅在 内容区域中显示。
+         */
+        fullPage: true,
+
+        /** @see https://zhensherlock.github.io/watermark-js-plus/zh/config/ */
+        watermarkOptions: {
+          content: 'your watermark',
+          // ...
+        }
+      }
+    }
+  })
+})
+```
+
+:::
+
 ## 配置项
 
 ### enabled
