--- a/docs/notes/theme/config/plugins/阅读统计.md
+++ b/docs/notes/theme/config/plugins/阅读统计.md
@@ -12,6 +12,9 @@ permalink: /config/plugins/reading-time/
 
 默认配置：
 
+::: code-tabs
+@tab .vuepress/config.ts
+
 ```ts
 import { defineUserConfig } from 'vuepress'
 import { plumeTheme } from 'vuepress-theme-plume'
@@ -26,6 +29,8 @@ export default defineUserConfig({
   }),
 })
 ```
+
+:::
 
 ## 配置
 
