--- a/docs/notes/theme/config/侧边栏配置.md
+++ b/docs/notes/theme/config/侧边栏配置.md
@@ -22,6 +22,9 @@ permalink: /config/sidebar/
 
 你可以在 `notes` 目录下创建多个 `note` ，在每一个 `note` 中单独配置 `sidebar`:
 
+::: code-tabs
+@tab .vuepress/config.ts
+
 ```ts
 import { defineUserConfig } from 'vuepress'
 import { defineNoteConfig, plumeTheme } from 'vuepress-theme-plume'
@@ -47,12 +50,17 @@ export default defineUserConfig({
 })
 ```
 
+:::
+
 主题提供了 `defineNoteConfig` 来帮助你配置 note , 你可以参考 [这里](./notes配置.md)来查看如何配置。
 
 ## 通用 Sidebar 配置
 
 如果你不想使用 `notes` 的方式来管理系列文章，但又期望通过侧边栏来导航到不同的文章，
 可以通过 [sidebar](../config/主题配置.md#sidebar) 通用配置来实现。
+
+::: code-tabs
+@tab .vuepress/config.ts
 
 ```ts
 import { defineUserConfig } from 'vuepress'
@@ -70,3 +78,7 @@ export default defineUserConfig({
   })
 })
 ```
+
+:::
+
+完整侧边栏使用说明，请查看 [此文档](../guide/知识笔记.md) 。
