--- a/docs/notes/theme/config/导航栏配置.md
+++ b/docs/notes/theme/config/导航栏配置.md
@@ -122,6 +122,9 @@ type NavItem = string | {
 
 ### 嵌套配置示例
 
+::: code-tabs
+@tab .vuepress/config.ts
+
 ```ts
 import { defineUserConfig } from 'vuepress'
 import { plumeTheme } from 'vuepress-theme-plume'
@@ -183,6 +186,8 @@ export default defineUserConfig({
   })
 })
 ```
+
+:::
 
 ### `activeMatch`
 
