--- a/docs/notes/theme/guide/markdown/文件树.md
+++ b/docs/notes/theme/guide/markdown/文件树.md
@@ -106,6 +106,9 @@ permalink: /guide/markdown/file-tree/
 
 你可以在 `plugins.mdPower.fileTree` 选项中配置 文件树的图标默认类型：
 
+::: code-tabs
+@tab .vuepress/config.ts
+
 ```ts
 export default defineUserConfig({
   theme: plumeTheme({
@@ -119,6 +122,8 @@ export default defineUserConfig({
   })
 })
 ```
+
+:::
 
 ::: tip 担心彩色图标会影响构建包体积？
 您无需担心，文件树的彩色图标 也是从 `iconify` 解析获取，推荐您在本地安装 `@iconify/json` 项目，
