--- a/docs/notes/theme/guide/代码/介绍.md
+++ b/docs/notes/theme/guide/代码/介绍.md
@@ -18,6 +18,9 @@ permalink: /guide/code/intro/
 
 示例：
 
+::: code-tabs
+@tab .vuepress/config.ts
+
 ```ts
 export default defineUserConfig({
   theme: plumeTheme({
@@ -29,6 +32,8 @@ export default defineUserConfig({
   })
 })
 ```
+
+:::
 
 ---
 
