--- a/docs/notes/theme/guide/代码/特性支持.md
+++ b/docs/notes/theme/guide/代码/特性支持.md
@@ -12,6 +12,9 @@ permalink: /guide/code/features/
 
 主题默认显示代码行号，它通过 `plugins.shiki.line-numbers` 来控制。
 
+::: code-tabs
+@tab .vuepress/config.ts
+
 ```ts
 export default defineUserConfig({
   theme: plumeTheme({
@@ -21,6 +24,8 @@ export default defineUserConfig({
   })
 })
 ```
+
+:::
 
 你还可以通过 `:line-numbers` / `:no-line-numbers` 来控制当前代码块是否显示代码行号。
 还可以通过在 `:line-numbers` 之后添加 `=` 来自定义起始行号，例如 `:line-numbers=2` 表示代码块中的行号从 `2` 开始。
