--- a/docs/notes/theme/guide/功能/公告板.md
+++ b/docs/notes/theme/guide/功能/公告板.md
@@ -20,6 +20,9 @@ permalink: /guide/features/bulletin/
 
 ### 配置说明
 
+::: code-tabs
+@tab .vuepress/config.ts
+
 ```ts
 import { defineUserConfig } from 'vuepress'
 import { plumeTheme } from 'vuepress-theme-plume'
@@ -32,6 +35,8 @@ export default defineUserConfig({
   })
 })
 ```
+
+:::
 
 ```ts
 interface BulletinOptions {
@@ -112,6 +117,9 @@ interface BulletinOptions {
 
 当您仅需要配置 简单的公告板，仅包含一些简要的内容 时，可以直接使用 `bulletin.content` 添加内容。
 
+::: code-tabs
+@tab .vuepress/config.ts
+
 ```ts
 export default defineUserConfig({
   theme: plumeTheme({
@@ -124,7 +132,12 @@ export default defineUserConfig({
 })
 ```
 
+:::
+
 还可以声明 `bulletin.contentType` 为 `markdown` ，这可以在 `content` 中使用 markdown 语法。
+
+::: code-tabs
+@tab .vuepress/config.ts
 
 ```ts
 export default defineUserConfig({
@@ -144,12 +157,17 @@ export default defineUserConfig({
 })
 ```
 
+:::
+
 ## 长内容公告
 
 当您需要配置 长内容的公告板时，将长内容写在配置文件中会显得比较臃肿和难以阅读，
 这时候可以使用 `bulletin.contentFile` 添加内容文件路径，将长内容与配置文件分开。
 
 `bulletin.contentFile` 需要传入一个 `markdown` 或 `html` 文件的绝对路径。主题将使用该文件内容作为公告内容。
+
+::: code-tabs
+@tab .vuepress/config.ts
 
 ```ts
 export default defineUserConfig({
@@ -163,8 +181,7 @@ export default defineUserConfig({
 })
 ```
 
-::: code-tabs
-@tab _bulletin.md
+@tab .vuepress/_bulletin.md
 
 ```md
 **更新说明**
@@ -186,6 +203,9 @@ export default defineUserConfig({
 
 首先，配置 `bulletin` 的基础内容，此时您无需再配置 `bulletin.content` 或 `bulletin.contentFile` 。
 
+::: code-tabs
+@tab .vuepress/config.ts
+
 ```ts
 export default defineUserConfig({
   theme: plumeTheme({
@@ -196,6 +216,8 @@ export default defineUserConfig({
   })
 })
 ```
+
+:::
 
 然后，在 `.vuepress/client.ts` 中注册全局组件 `BulletinContent` ，主题将会自动检索该插件并作为公告板的内容。
 
