--- a/docs/notes/theme/guide/功能/内容搜索.md
+++ b/docs/notes/theme/guide/功能/内容搜索.md
@@ -24,6 +24,9 @@ permalink: /guide/features/content-search/
 
 主题默认 启用 本地内容搜索 功能。您也可以对其进行自定义配置。
 
+::: code-tabs
+@tab .vuepress/config.ts
+
 ```ts
 import { defineUserConfig } from 'vuepress'
 import { plumeTheme } from 'vuepress-theme-plume'
@@ -39,6 +42,8 @@ export default defineUserConfig({
 })
 ```
 
+:::
+
 该插件会根据你的页面，在本地生成搜索索引，然后在用户访问站点时加载搜索索引文件。
 换句话说，这是一个轻量级的内置搜索能力，不会进行任何外部请求。
 
@@ -50,6 +55,9 @@ export default defineUserConfig({
 使用 [Algolia DocSearch](https://docsearch.algolia.com/) 提供支持的网站内容搜索插件
 
 ### 启用
+
+::: code-tabs
+@tab .vuepress/config.ts
 
 ```ts
 import { defineUserConfig } from 'vuepress'
@@ -65,6 +73,8 @@ export default defineUserConfig({
   })
 })
 ```
+
+:::
 
 ### 获取搜索索引
 
@@ -220,6 +230,9 @@ new Crawler({
 
 以下是本主题使用的配置：
 
+::: code-tabs
+@tab .vuepress/config.ts
+
 ```ts
 import { defineUserConfig } from 'vuepress'
 import { plumeTheme } from 'vuepress-theme-plume'
@@ -236,3 +249,5 @@ export default defineUserConfig({
   })
 })
 ```
+
+:::
