--- a/docs/notes/theme/guide/功能/加密.md
+++ b/docs/notes/theme/guide/功能/加密.md
@@ -24,6 +24,9 @@ permalink: /guide/features/encryption/
 
 在 主题配置中，添加 `encrypt` 选项。
 
+::: code-tabs
+@tab .vuepress/config.ts
+
 ```ts
 import { defineUserConfig } from 'vuepress'
 import { plumeTheme } from 'vuepress-theme-plume'
@@ -37,11 +40,16 @@ export default defineUserConfig({
 })
 ```
 
+:::
+
 ## 全站加密
 
 有些情况下，你可能 需要对 全站进行加密。
 因此，你可以通过 `encrypt.global` 选项配置全站加密。
 然后，通过配置 `encrypt.admin` 选项，设置一个或多个密码。
+
+::: code-tabs
+@tab .vuepress/config.ts
 
 ```ts
 export default defineUserConfig({
@@ -54,10 +62,15 @@ export default defineUserConfig({
 })
 ```
 
+:::
+
 ## 部分加密
 
 大多数情况下，你可能只需需要 加密 某一篇文章、某一个目录 等。
 因此，你可以通过 `encrypt.rules` 选项配置部分加密。
+
+::: code-tabs
+@tab .vuepress/config.ts
 
 ```ts
 export default defineUserConfig({
@@ -79,6 +92,8 @@ export default defineUserConfig({
   })
 })
 ```
+
+:::
 
 `encrypt.rules` 的 **键** 将作为 匹配规则，**值** 将作为 该规则对应的密码，可以设置 一个或多个密码。
 
@@ -128,6 +143,9 @@ export default defineUserConfig({
 
 ### 示例
 
+::: code-tabs
+@tab .vuepress/config.ts
+
 ```ts
 import { defineUserConfig } from 'vuepress'
 import { plumeTheme } from 'vuepress-theme-plume'
@@ -145,3 +163,5 @@ export default defineUserConfig({
   })
 })
 ```
+
+:::
