--- a/docs/notes/theme/guide/功能/文章变更历史.md
+++ b/docs/notes/theme/guide/功能/文章变更历史.md
@@ -1,6 +1,9 @@
 ---
 title: 文章变更历史
 icon: radix-icons:activity-log
+badge:
+  type: tip
+  text: v1.0.0-rc.115 +
 createTime: 2024/11/07 18:16:25
 permalink: /guide/features/changelog/
 ---
