--- a/docs/notes/theme/guide/功能/文章贡献者.md
+++ b/docs/notes/theme/guide/功能/文章贡献者.md
@@ -1,6 +1,9 @@
 ---
 title: 文章贡献者
 icon: simple-icons:contributorcovenant
+badge:
+  type: tip
+  text: v1.0.0-rc.115 +
 createTime: 2024/11/07 16:26:54
 permalink: /guide/features/contributors/
 ---
