--- a/docs/notes/theme/guide/博客.md
+++ b/docs/notes/theme/guide/博客.md
@@ -292,6 +292,9 @@ cover: # [!code ++:5]
 虽然主题支持为每个文章的封面图使用不同的配置，出于整体布局风格的考虑，以及简化配置的目的，
 主题还支持为封面图预设配置：
 
+::: code-tabs
+@tab .vuepress/config.ts
+
 ```ts
 export default defineUserConfig({
   theme: plumeTheme({
@@ -309,6 +312,8 @@ export default defineUserConfig({
   })
 })
 ```
+
+:::
 
 ```ts
 type BlogPostCoverLayout = 'left' | 'right' | 'odd-left' | 'odd-right' | 'top'
@@ -474,6 +479,9 @@ config:
 
 （还可以在重新修改 分类页/标签页/归档页的链接地址）
 
+::: code-tabs
+@tab .vuepress/config.ts
+
 ```ts
 import { defineUserConfig } from 'vuepress'
 import { plumeTheme } from 'vuepress-theme-plume'
@@ -489,3 +497,5 @@ export default defineUserConfig({
   })
 })
 ```
+
+:::
