--- a/docs/notes/theme/guide/国际化.md
+++ b/docs/notes/theme/guide/国际化.md
@@ -39,7 +39,10 @@ tags:
 
 ## vuepress 配置
 
-接下来，在 `.vuepress/config.js` 中配置：
+接下来，在 `.vuepress/config.ts` 中配置：
+
+::: code-tabs
+@tab .vuepress/config.ts
 
 ```js
 import { defineUserConfig } from 'vuepress'
@@ -57,6 +60,8 @@ export default defineUserConfig({
 })
 ```
 
+:::
+
 `locales` 中的 `key` 对应着 `docs` 目录下的语言路径，同时，`key` 也将作为 不同语言的页面访问链接的前缀。
 
 ## 主题配置
@@ -64,6 +69,9 @@ export default defineUserConfig({
 在主题配置中，同样使用 `locales` 配置项进行多语言配置。
 
 `locales` 支持 所有主题配置项。
+
+::: code-tabs
+@tab .vuepress/config.ts
 
 ```js
 import { plumeTheme } from '@vuepress-plume/vuepress-theme-plume'
@@ -105,5 +113,7 @@ export default defineUserConfig({
   })
 })
 ```
+
+:::
 
 更多 `locales` 配置请查看 [主题配置 > Locales 配置](../config/主题配置.md#locale-配置)
