--- a/docs/notes/theme/guide/安装与使用.md
+++ b/docs/notes/theme/guide/安装与使用.md
@@ -167,7 +167,7 @@ cd open-source # 进入 D: 分区下的 open-source 目录
 - ### 在 `docs/.vuepress/config.{js,ts}` 中配置主题
 
   ::: code-tabs
-  @tab docs/.vuepress/config.js
+  @tab docs/.vuepress/config.ts
 
   ``` ts :no-line-numbers
   import { viteBundler } from '@vuepress/bundler-vite'
