--- a/docs/notes/theme/guide/知识笔记.md
+++ b/docs/notes/theme/guide/知识笔记.md
@@ -39,7 +39,10 @@ tags:
 
 接下来，在配置文件中配置 `notes`：
 
-```js :collapsed-lines=20
+::: code-tabs
+@tab .vuepress/config.ts
+
+```js
 import { defineUserConfig } from 'vuepress'
 import { plumeTheme } from 'vuepress-theme-plume'
 
@@ -73,6 +76,8 @@ export default defineUserConfig({
   })
 })
 ```
+
+:::
 
 ::: tip
 
@@ -135,6 +140,94 @@ export default defineUserConfig({
 ```
 
 :::
+
+:::: details 笔记比较多时怎么配置？
+如果您拥有比较多的笔记，全部放到一个 `notes.ts` 中配置，可能会显得文件比较大且不好维护。
+您可以对文件进行拆分，以 `.vuepress/notes/` 目录作为 笔记配置的目录。
+::: file-tree
+
+- docs
+  - .vuepress
+    - notes
+      - typescript.ts
+      - rust.ts
+      - index.ts
+      - …
+  - notes
+    - typescript/
+    - rust/
+:::
+
+代码如下所示：
+
+::: code-tabs
+@tab .vuepress/config.ts
+
+```ts
+import { defineUserConfig } from 'vuepress'
+import { plumeTheme } from 'vuepress-theme-plume'
+import notes from './notes/index.js' // [!code ++]
+
+export default defineUserConfig({
+  theme: plumeTheme({
+    notes // [!code ++]
+  }),
+})
+```
+
+@tab .vuepress/notes/index.ts
+
+```ts
+import { defineNotesConfig } from 'vuepress-theme-plume'
+import rust from './rust' // [!code ++]
+import typescript from './typescript' // [!code ++]
+
+export default defineNotesConfig({
+  // 声明所有笔记的目录，(默认配置，通常您不需要声明它)
+  dir: '/notes/',
+  link: '/',
+  // 在这里添加 note 配置
+  notes: [ // [!code ++:4]
+    typescript,
+    rust,
+  ]
+})
+```
+
+@tab .vuepress/notes/typescript.ts
+
+```ts
+import { defineNoteConfig } from 'vuepress-theme-plume'
+
+export default defineNoteConfig({
+  dir: 'typescript',
+  link: '/typescript/',
+  sidebar: [
+    '/guide/intro.md',
+    '/guide/getting-start.md',
+    '/config/config-file.md',
+  ]
+})
+```
+
+@tab .vuepress/notes/rust.ts
+
+```ts
+import { defineNoteConfig } from 'vuepress-theme-plume'
+
+export default defineNoteConfig({
+  dir: 'rust',
+  link: '/rust/',
+  sidebar: [
+    '/guide/intro.md',
+    '/guide/getting-start.md',
+    '/config/config-file.md',
+  ]
+})
+```
+
+:::
+::::
 
 ### 侧边栏配置
 
@@ -227,10 +320,13 @@ interface SidebarItem {
 
 当 传入类型为 `string` 时，表示 markdown 文件的路径：
 
+::: code-tabs
+@tab .vuepress/notes.ts
+
 ```ts
 import { defineNoteConfig } from 'vuepress-theme-plume'
 
-export default defineNoteConfig({
+const typescript = defineNoteConfig({
   dir: 'typescript',
   link: '/typescript/',
   sidebar: [
@@ -240,17 +336,24 @@ export default defineNoteConfig({
     // ...
   ]
 })
+
+// ... other code
 ```
+
+:::
 
 你也可以省略 `.md` 文件后缀，简写为 `/guide/intro` 。主题会解析 对应的文件，获取 **标题** 和 **页面链接地址**
 并将其转换为 `{ text: string, link: string }` 的数据形式。
 
 当传入类型为 `SidebarItem` 时:
 
+::: code-tabs
+@tab .vuepress/notes.ts
+
 ```ts
 import { defineNoteConfig } from 'vuepress-theme-plume'
 
-export default defineNoteConfig({
+const typescript = defineNoteConfig({
   dir: 'typescript',
   link: '/typescript/',
   sidebar: [
@@ -259,14 +362,21 @@ export default defineNoteConfig({
   // ...
   ]
 })
+
+// ... other code
 ```
 
+:::
+
 也可以进行多层嵌套：
+
+::: code-tabs
+@tab .vuepress/notes.ts
 
 ```ts
 import { defineNoteConfig } from 'vuepress-theme-plume'
 
-export default defineNoteConfig({
+const typescript = defineNoteConfig({
   dir: 'typescript',
   link: '/typescript/',
   sidebar: [
@@ -286,7 +396,11 @@ export default defineNoteConfig({
     },
   ]
 })
+
+// ... other code
 ```
+
+:::
 
 ### 关于 `prefix`
 
@@ -295,10 +409,14 @@ export default defineNoteConfig({
 
 需要注意的是，`items` 中的链接 仅有 相对路径的链接才会与 `prefix` 拼接，而绝对路径则不进行处理。
 
+::: code-tabs
+
+@tab .vuepress/notes.ts
+
 ```ts
 import { defineNoteConfig } from 'vuepress-theme-plume'
 
-export default defineNoteConfig({
+const typescript = defineNoteConfig({
   dir: 'typescript',
   link: '/typescript/',
   sidebar: [
@@ -321,14 +439,19 @@ export default defineNoteConfig({
 })
 ```
 
+:::
+
 同时，`items` 内还支持 深层嵌套，内部还依然支持 `prefix`，这里也遵循相同的规则，`prefix` 如果是相对路径，
 则会与 上一层的 `prefix` 拼接，再与 当前层级 `items` 内的 `link` 拼接，如果 `prefix` 是绝对路径，则不与
 上一层级 `prefix` 拼接。
 
+::: code-tabs
+@tab .vuepress/notes.ts
+
 ```ts
 import { defineNoteConfig } from 'vuepress-theme-plume'
 
-export default defineNoteConfig({
+const typescript = defineNoteConfig({
   dir: 'typescript',
   link: '/typescript/',
   sidebar: [
@@ -356,6 +479,8 @@ export default defineNoteConfig({
 })
 ```
 
+:::
+
 **是否是绝对路径的判断标准是，如果以 `/` 开头，则为绝对路径，否则为相对路径**
 
 :::warning
@@ -367,10 +492,13 @@ export default defineNoteConfig({
 为侧边栏添加 图标 有助于 侧边栏更好的呈现。得益于 [iconify](https://iconify.design/) 这个强大的开源图标库，
 你可以使用超过 `200k` 的图标，仅需要添加 `icon` 配置即可。
 
+::: code-tabs
+@tab .vuepress/notes.ts
+
 ```ts
 import { defineNoteConfig } from 'vuepress-theme-plume'
 
-export default defineNoteConfig({
+const typescript = defineNoteConfig({
   dir: 'typescript',
   link: '/typescript/',
   sidebar: [
@@ -386,12 +514,17 @@ export default defineNoteConfig({
 })
 ```
 
+:::
+
 也可以使用本地图标，或者本地图片：
+
+::: code-tabs
+@tab .vuepress/notes.ts
 
 ```ts
 import { defineNoteConfig } from 'vuepress-theme-plume'
 
-export default defineNoteConfig({
+const typescript = defineNoteConfig({
   dir: 'typescript',
   link: '/typescript/',
   sidebar: [
@@ -408,6 +541,8 @@ export default defineNoteConfig({
   ]
 })
 ```
+
+:::
 
 **请注意，使用本地图片必须以 `/` 开头，表示为 静态资源路径，它将从 `.vuepress/public/` 目录中加载。**
 
