--- a/docs/notes/theme/config/多语言配置.md
+++ b/docs/notes/theme/config/多语言配置.md
@@ -72,6 +72,9 @@ export default defineUserConfig({
 
 与站点配置和 `@vuepress/theme-default` 的主题配置相同，`vuepress-theme-plume` 也支持你在主题选项中设置 locale 选项，并为每种语言设置不同的配置。
 
+::: code-tabs
+@tab .vuepress/config.ts
+
 ```ts :no-line-numbers
 import { defineUserConfig } from 'vuepress'
 import { plumeTheme } from 'vuepress-theme-plume'
@@ -102,6 +105,8 @@ export default defineUserConfig({
   }),
 })
 ```
+
+:::
 
 **使用主题配置文件：**
 
