feat(theme): optimize appearance transition, close #325 (#333)

--- a/docs/notes/theme/config/主题配置.md
+++ b/docs/notes/theme/config/主题配置.md
@@ -711,10 +711,11 @@ interface SidebarItem {
      */
     postList?: boolean
     /**
-     * 是否启用 深色/浅色 模式切换过渡动画
-     * @default true
+     * 是否启用 深色/浅色 模式切换过渡动画，
+     * 或配置过渡动画类型
+     * @default 'fade'
      */
-    appearance?: boolean
+    appearance?: boolean | 'fade' | 'circle-clip' | 'horizontal-clip' | 'vertical-clip' | 'skew-clip'
   }
   ```
 
