feat(theme): add categories transform and improve ui (#342)

--- a/docs/notes/theme/config/主题配置.md
+++ b/docs/notes/theme/config/主题配置.md
@@ -146,6 +146,13 @@ interface BlogOptions {
   categoriesExpand?: number | 'deep'
 
   /**
+   * 文章分类列表转换函数，比如排除不需要的一级分类
+   * @param categories 分类列表
+   * @returns 返回一个新的分类列表
+   */
+  categoriesTransform?: (categories: PageCategoryData[]) => PageCategoryData[]
+
+  /**
    * 博客文章封面图
    *
    * 配置封面图的位置，支持 `'left'`、`'right'`、`'top'`、`'top-inside'`
