feat(theme): add support for article copyright (#345)

--- a/docs/notes/theme/config/主题配置.md
+++ b/docs/notes/theme/config/主题配置.md
@@ -838,6 +838,50 @@ interface SidebarItem {
 - 默认值： `'View All Changelog'`
 - 详情： 变更记录的按钮文本
 
+### copyright
+
+- 类型： `boolean | CopyrightLicense | CopyrightOptions`
+- 默认值： `false`
+- 详情： 版权配置
+
+  详情请参考 [版权所有](../guide/功能/文章版权所有.md)
+
+### copyrightText
+
+- 类型： `string`
+- 默认值： `'Copyright'`
+- 详情： 版权所有的文本
+
+### copyrightAuthorText
+
+- 类型： `string`
+- 默认值： `'Copyright Ownership:'`
+- 详情： 版权所有者的文本
+
+### copyrightCreationOriginalText
+
+- 类型： `string`
+- 默认值： `'This article link:'`
+- 详情： 本文链接的文本
+
+### copyrightCreationTranslateText
+
+- 类型： `string`
+- 默认值： `'This article translated from:'`
+- 详情： 本文翻译的文本
+
+### copyrightCreationReprintText
+
+- 类型： `string`
+- 默认值： `'This article reprint from:'`
+- 详情： 本文转载的文本
+
+### copyrightLicenseText
+
+- 类型： `string`
+- 默认值： `'License under:'`
+- 详情： 版权许可证的文本
+
 ### prevPage
 
 - 类型： `boolean`
